--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>Details here...</p>
-      <h1>Detroit, MI</h1>
-      <p>Details here...</p>
+      <h1>Where I'm from</h1>
+      <p>Detroit, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>Occupational Therapy combined with IT </h1>
-      <p>Details here...</p>
-      <h1>Detroit, MI</h1>
-      <p>Details here...</p>
+      <p>Details here .</p>
+      <h1>What's your dream job?</h1>
+      <p>Occupational Therapy combined with IT</p>
+      <h1>Where do I live?</h1>
+      <p>Detroit, MI</p>
       <h1>Why do you want to be a web developer?</h1>
       <p>Details here...</p>
     </section>
