--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm from</h1>
       <p>Detroit, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here .</p>
+      <p>Details here </p>
       <h1>What's your dream job?</h1>
       <p>Occupational Therapy combined with IT</p>
       <h1>Where do I live?</h1>
